welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: Missing closing brace `}' assumed here
while fini=false {
^BDR2:1: error: '(' expected but identifier found.
while fini=false {
      ^BDR2:21: error: illegal start of simple expression
}
^